--- a/src/app/employees/employees.component.html
+++ b/src/app/employees/employees.component.html
@@ -66,7 +66,7 @@
                                         <button class="btn btn-outline-secondary btn-sm dropdown-toggle" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Preview</button>
 
                                       <div class="dropdown-menu">
-                                        <a (click)="previewAttachment(attachment.employeeId,attachment.id)" class="dropdown-item preview" *ngFor="let attachment of employee.attachments"> 
+                                        <a (click)="previewAttachment(employee.attachmentGroupId)" class="dropdown-item preview" *ngFor="let attachment of employee.attachments"> 
                                           
                                            <a  [href]="'./assets/Files/' + attachment.fileName" download="{{attachment.fileName}}">
                                             <mat-icon class="download" >download</mat-icon>
@@ -118,7 +118,7 @@
             <mat-form-field appearance="outline">
                 <mat-label>Enter First Name</mat-label>
                 <input matInput type="text" placeholder="Enter first name" formControlName="firstName">
-                <mat-error *ngIf="edit.get('firstName')?.hasError('required')">First name is required</mat-error>
+                <mat-error *ngIf="form.get('firstName')?.hasError('required')">First name is required</mat-error>
               </mat-form-field>
               
               <div class="form-field-spacer"></div>
@@ -126,7 +126,7 @@
               <mat-form-field appearance="outline">
                 <mat-label>Enter Last Name</mat-label>
                 <input matInput type="text" placeholder="Enter last name" formControlName="lastName">
-                <mat-error *ngIf="edit.get('lastName')?.hasError('required')">Last name is required</mat-error>
+                <mat-error *ngIf="form.get('lastName')?.hasError('required')">Last name is required</mat-error>
               </mat-form-field>
 
               <div class="form-field-spacer"></div>
@@ -134,7 +134,7 @@
               <mat-form-field appearance="outline">
                 <mat-label>Enter Employee Name</mat-label>
                 <input matInput type="text" placeholder="Enter employee name" formControlName="employeeName">
-                <mat-error *ngIf="edit.get('employeeName')?.hasError('required')">Employee name is required</mat-error>
+                <mat-error *ngIf="form.get('employeeName')?.hasError('required')">Employee name is required</mat-error>
               </mat-form-field>
 
               <div class="form-field-spacer"></div>
@@ -174,7 +174,7 @@
               <mat-form-field appearance="outline">
                 <mat-label>Enter City</mat-label>
                 <input matInput type="text" placeholder="Enter city name" formControlName="city">
-                <mat-error *ngIf="edit.get('city')?.hasError('required')">City name is required</mat-error>
+                <mat-error *ngIf="form.get('city')?.hasError('required')">City name is required</mat-error>
               </mat-form-field>
 
               <div class="form-field-spacer"></div>
@@ -182,7 +182,7 @@
                  <mat-form-field appearance="outline">
                 <mat-label>Enter Street</mat-label>
                 <input matInput type="text" placeholder="Enter street name" formControlName="street">
-                <mat-error *ngIf="edit.get('street')?.hasError('required')">Street name is required</mat-error>
+                <mat-error *ngIf="form.get('street')?.hasError('required')">Street name is required</mat-error>
               </mat-form-field>
 
               <div class="form-field-spacer"></div>  
@@ -190,7 +190,7 @@
               <mat-form-field appearance="outline">
                 <mat-label>Enter Country</mat-label>
                 <input matInput type="text" placeholder="Enter country name" formControlName="country">
-                <mat-error *ngIf="edit.get('country')?.hasError('required')">country name is required</mat-error>
+                <mat-error *ngIf="form.get('country')?.hasError('required')">country name is required</mat-error>
               </mat-form-field>
               
         <div>
@@ -249,7 +249,7 @@
                 style="width: 1000px; height: 600px">
               </pdf-viewer>
               -->
-             
+         
               <iframe [src]='urlSafe' width='1000px' height='600px' frameborder='0'></iframe>
 
       </div>
